@@ -8,8 +8,8 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io tzset restrict time_r mktime minmax memmove nanosleep stat lstat strerror vasprintf malloc realloc strftime xsize getpagesize md5 stdint
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt getpagesize getpass-gnu gettext gettime gettimeofday lstat malloc md5 memmove minmax mkstemp mktime nanosleep pathmax realloc regex restrict save-cwd stat stdbool stdint strcase strerror strftime time_r timespec tzset unlocked-io vasnprintf vasprintf xalloc xgetcwd xsize
+# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io tzset restrict time_r mktime minmax memmove nanosleep stat lstat strerror vasprintf malloc realloc strftime xsize getpagesize md5 stdint yesno
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt getpagesize getpass-gnu gettext gettime gettimeofday lstat malloc md5 memmove minmax mkstemp mktime nanosleep pathmax realloc regex restrict rpmatch save-cwd stat stdbool stdint strcase strerror strftime time_r timespec tzset unlocked-io vasnprintf vasprintf xalloc xgetcwd xsize yesno
 
 AUTOMAKE_OPTIONS = 1.5 gnits no-dependencies
 
@@ -167,7 +167,7 @@ libgnu_a_SOURCES += pathmax.h
 
 ## begin gnulib module regex
 
-libgnu_a_SOURCES += regex.h
+libgnu_a_SOURCES += regex.h regex.c
 
 ## end   gnulib module regex
 
@@ -272,6 +272,12 @@ libgnu_a_SOURCES += xgetcwd.h xgetcwd.c
 libgnu_a_SOURCES += xsize.h
 
 ## end   gnulib module xsize
+
+## begin gnulib module yesno
+
+libgnu_a_SOURCES += yesno.c yesno.h
+
+## end   gnulib module yesno
 
 
 # Makefile.am ends here
