@@ -1,3 +1,9 @@
+2004-10-21  Derek Price  <derek@ximbiot.com>
+
+	* Makefile.am (libcvs_a_SOURCES): Add yesno.h.
+	* rpmatch.c, yesno.h: New files from GNULIB.
+	* yesno.c: Update from GNULIB.
+
 2004-10-23  Conrad T. Pino  <Conrad@Pino.com>
 
 	* libcvs.dsp: Add "../windows-NT/stdint.h" to project.
